[main-private] code inspection of core-messages