@@ -26,8 +26,8 @@ public class SortedFieldsTest {
 	List<SimpleEntry<Queryable, SortOrder>> list = fields.getFields();
 	Assert.assertEquals(1, list.size());
 
-	Assert.assertEquals(MetadataElement.IDENTIFIER, list.get(0).getKey());
-	Assert.assertEquals(SortOrder.ASCENDING, list.get(0).getValue());
+	Assert.assertEquals(MetadataElement.IDENTIFIER, list.getFirst().getKey());
+	Assert.assertEquals(SortOrder.ASCENDING, list.getFirst().getValue());
 
 	//
 	//
@@ -37,8 +37,8 @@ public class SortedFieldsTest {
 	list = fields.getFields();
 	Assert.assertEquals(1, list.size());
 
-	Assert.assertEquals(MetadataElement.IDENTIFIER, list.get(0).getKey());
-	Assert.assertEquals(SortOrder.ASCENDING, list.get(0).getValue());
+	Assert.assertEquals(MetadataElement.IDENTIFIER, list.getFirst().getKey());
+	Assert.assertEquals(SortOrder.ASCENDING, list.getFirst().getValue());
 
 	//
 	//
@@ -48,8 +48,8 @@ public class SortedFieldsTest {
 	list = fields.getFields();
 	Assert.assertEquals(1, list.size());
 
-	Assert.assertEquals(MetadataElement.TITLE, list.get(0).getKey());
-	Assert.assertEquals(SortOrder.DESCENDING, list.get(0).getValue());
+	Assert.assertEquals(MetadataElement.TITLE, list.getFirst().getKey());
+	Assert.assertEquals(SortOrder.DESCENDING, list.getFirst().getValue());
     }
 
     @Test
@@ -59,8 +59,8 @@ public class SortedFieldsTest {
 	List<SimpleEntry<Queryable, SortOrder>> list = fields.getFields();
 	Assert.assertEquals(1, list.size());
 
-	Assert.assertEquals(MetadataElement.IDENTIFIER, list.get(0).getKey());
-	Assert.assertEquals(SortOrder.ASCENDING, list.get(0).getValue());
+	Assert.assertEquals(MetadataElement.IDENTIFIER, list.getFirst().getKey());
+	Assert.assertEquals(SortOrder.ASCENDING, list.getFirst().getValue());
 
 	//
 	//
@@ -70,16 +70,16 @@ public class SortedFieldsTest {
 	list = fields.getFields();
 	Assert.assertEquals(1, list.size());
 
-	Assert.assertEquals(MetadataElement.IDENTIFIER, list.get(0).getKey());
-	Assert.assertEquals(SortOrder.ASCENDING, list.get(0).getValue());
+	Assert.assertEquals(MetadataElement.IDENTIFIER, list.getFirst().getKey());
+	Assert.assertEquals(SortOrder.ASCENDING, list.getFirst().getValue());
     }
 
     @Test
     public void test2() {
 
 	SortedFields fields = new SortedFields(Arrays.asList(//
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.ABSTRACT, SortOrder.DESCENDING)));
+		new SimpleEntry<>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
+		new SimpleEntry<>(MetadataElement.ABSTRACT, SortOrder.DESCENDING)));
 
 	List<SimpleEntry<Queryable, SortOrder>> list = fields.getFields();
 	Assert.assertEquals(2, list.size());
@@ -95,8 +95,8 @@ public class SortedFieldsTest {
 	//
 
 	fields = SortedFields.of(Arrays.asList(//
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.ABSTRACT, SortOrder.DESCENDING)));
+		new SimpleEntry<>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
+		new SimpleEntry<>(MetadataElement.ABSTRACT, SortOrder.DESCENDING)));
 
 	list = fields.getFields();
 
@@ -113,8 +113,8 @@ public class SortedFieldsTest {
     public void test3() {
 
 	SortedFields fields = new SortedFields(//
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.ABSTRACT, SortOrder.DESCENDING));
+		new SimpleEntry<>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
+		new SimpleEntry<>(MetadataElement.ABSTRACT, SortOrder.DESCENDING));
 
 	List<SimpleEntry<Queryable, SortOrder>> list = fields.getFields();
 	Assert.assertEquals(2, list.size());
@@ -130,8 +130,8 @@ public class SortedFieldsTest {
 	//
 
 	fields = SortedFields.of(//
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
-		new SimpleEntry<Queryable, SortOrder>(MetadataElement.ABSTRACT, SortOrder.DESCENDING));
+		new SimpleEntry<>(MetadataElement.IDENTIFIER, SortOrder.ASCENDING), //
+		new SimpleEntry<>(MetadataElement.ABSTRACT, SortOrder.DESCENDING));
 
 	list = fields.getFields();
 
